--- a/reportwriter/admin/forms/ReportsHome.html
+++ b/reportwriter/admin/forms/ReportsHome.html
@@ -15,7 +15,7 @@
 				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_ADDNEW; ?>" /></p>
 				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_EDIT; ?>" /></p>
 				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_RENAME; ?>" /></p>
-				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_COPY; ?>"></p>
+				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_COPY; ?>" /></p>
 				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_DEL; ?>" onClick="return confirm('<?php echo RPT_REPDEL; ?>')" /></p>
 				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_IMPORT; ?>" /></p>
 				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_EXPORT; ?>" /></p>
