--- a/reportwriter/admin/forms/ReportsFieldSetup.html
+++ b/reportwriter/admin/forms/ReportsFieldSetup.html
@@ -171,7 +171,7 @@ document.onmousedown = mouseSelect;
 	<input name="SeqNum" type="hidden" value="<?php echo $FieldDetails['seqnum']; ?>" />
 	<input name="FieldName" type="hidden" value="<?php echo $FieldDetails['fieldname']; ?>" />
 	<input name="DisplayDesc" type="hidden" value="<?php echo $FieldDetails['displaydesc']; ?>" />
-	<?php if ($Type<>'frm') echo '<input name="ColumnBreak" type="hidden" value="'.$FieldDetails['columnbreak'].'">'; ?>
+	<?php if ($Type<>'frm') echo '<input name="ColumnBreak" type="hidden" value="'.$FieldDetails['columnbreak'].'" />'; ?>
 	<input name="Visible" type="hidden" value="<?php echo $FieldDetails['visible']; ?>" />
 	<input name="Params" type="hidden" value="<?php echo $FieldDetails['params']; ?>" />
 	  <td align = "center"><?php echo $FieldDetails['seqnum']; ?></td>
