XHTML corrections to code

--- a/reportwriter/forms/ReportsList.html
+++ b/reportwriter/forms/ReportsList.html
@@ -2,7 +2,7 @@
 <body>
 <form name="reporthome" method="post" action="ReportMaker.php?action=go">
 	<input type="hidden" name="FormID" value="<?php echo $_SESSION['FormID']; ?>" />
-  <input name="GoBackURL" type="hidden" value="<?php echo $GoBackURL; ?>">
+  <input name="GoBackURL" type="hidden" value="<?php echo $GoBackURL; ?>" />
   <table align="center" border="1" cellspacing="1" cellpadding="1">
 	<tr>
 		<td><div align="center"><?php echo RPT_DEFRPT; ?></div></td>
