XHTML corrections to code

--- a/reportwriter/forms/ReportsFilter.html
+++ b/reportwriter/forms/ReportsFilter.html
@@ -6,18 +6,18 @@
 <h2 align="center"><?php echo $Prefs['reportname'].' - '.RPT_BTN_CRIT; ?></h2>
 <form name="reporthome" method="post" action="ReportMaker.php?action=go">
 	<input type="hidden" name="FormID" value="<?php echo $_SESSION['FormID']; ?>" />
-  <input name="ReportID" type="hidden" value="<?php echo $ReportID; ?>">
-  <input name="FilterForm" type="hidden" value="1">
-  <input name="GoBackURL" type="hidden" value="<?php echo $GoBackURL; ?>">
+  <input name="ReportID" type="hidden" value="<?php echo $ReportID; ?>" />
+  <input name="FilterForm" type="hidden" value="1" />
+  <input name="GoBackURL" type="hidden" value="<?php echo $GoBackURL; ?>" />
   <table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tr>
-      <td width="20%"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_CANCEL; ?>"></td>
+      <td width="20%"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_CANCEL; ?>" /></td>
 	  <?php if (!$Prefs['defaultreport']) { ?>
-      <td width="20%"><div align="center"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_PGSETUP; ?>"></div></td>
+      <td width="20%"><div align="center"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_PGSETUP; ?>" /></div></td>
 	  <?php } else echo '<td width="20%">&nbsp;</td>'; ?>
-	  <td><div align="center"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_CPYRPT; ?>"></div></td>
-      <td width="20%"><div align="center"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_EXPCSV; ?>"></div></td>
-	  <td width="20%"><div align="right"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_EXPPDF; ?>"></div></td>
+	  <td><div align="center"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_CPYRPT; ?>" /></div></td>
+      <td width="20%"><div align="center"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_EXPCSV; ?>" /></div></td>
+	  <td width="20%"><div align="right"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_EXPPDF; ?>" /></div></td>
     </tr>
   </table>
   <table width="100%" border="1" cellspacing="1" cellpadding="1">
@@ -44,8 +44,8 @@
 			}
 		} ?>
         </select></td>
-	  <td><input name="DefDateFrom" type="text" value="<?php echo $DateArray[1]; ?>" id="DateFrom" size="11" maxlength="10"></td>
-	  <td><input name="DefDateTo" type="text" value="<?php echo $DateArray[2]; ?>" id="DateTo" size="11" maxlength="10"></td>
+	  <td><input name="DefDateFrom" type="text" value="<?php echo $DateArray[1]; ?>" id="DateFrom" size="11" maxlength="10" /></td>
+	  <td><input name="DefDateTo" type="text" value="<?php echo $DateArray[2]; ?>" id="DateTo" size="11" maxlength="10" /></td>
     </tr>
 	<?php } //end if ($Prefs['DateListings']['displaydesc'])
     if ($Prefs['GroupListings'] <> '') { ?>
@@ -81,10 +81,10 @@
 	<tr>
 	  <td><?php echo RPT_TRUNC; ?></td>
 	  <td>
-	    <?php if ($Prefs['TruncListings']['params']=='1') $Checked = ' checked'; else $Checked = ''; ?>
-          <input type="radio" name="DefTrunc" value="1"<?php echo $Checked; ?>><?php echo RPT_YES; ?>
-	    <?php if ($Prefs['TruncListings']['params']=='0') $Checked = ' checked'; else $Checked = ''; ?>
-          <input type="radio" name="DefTrunc" value="0"<?php echo $Checked; ?>><?php echo RPT_NO; ?> </td>
+	    <?php if ($Prefs['TruncListings']['params']=='1') $Checked = ' checked="True"'; else $Checked = ''; ?>
+          <input type="radio" name="DefTrunc" value="1"<?php echo $Checked; ?> /><?php echo RPT_YES; ?>
+	    <?php if ($Prefs['TruncListings']['params']=='0') $Checked = ' checked="True"'; else $Checked = ''; ?>
+          <input type="radio" name="DefTrunc" value="0"<?php echo $Checked; ?> /><?php echo RPT_NO; ?> </td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
     </tr>
@@ -102,7 +102,7 @@
 	  <table align="center" border="1" cellspacing="1" cellpadding="1">
 		<tr>
 			<td colspan="4"><div align="center"><?php echo RPT_FIELDS; ?></div></td>
-			<td><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_UPDATE; ?>"></td>
+			<td><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_UPDATE; ?>" /></td>
 		</tr>
 		<tr>
 			<td><div align="center"><?php echo RPT_FLDNAME; ?></div></td>
