--- a/reportwriter/forms/TplFrmLine.html
+++ b/reportwriter/forms/TplFrmLine.html
@@ -11,7 +11,7 @@
 	<input name="ReportName" type="hidden" value="<?php echo $reportname; ?>" />
   <table align="center" width="550"  border="0" cellspacing="0" cellpadding="0">
     <tr>
-      <td><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_CANCEL; ?>"></td>
+      <td><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_CANCEL; ?>" /></td>
       <td><div align="center"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_UPDATE; ?>" /></div></td>
       <td><div align="right"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_FINISH; ?>" /></div></td>
     </tr>
