XHTML corrections - replace Value= with value=

--- a/reportwriter/forms/ReportsFieldSetup.html
+++ b/reportwriter/forms/ReportsFieldSetup.html
@@ -40,7 +40,7 @@
 	  <?php } // end if ?>
 		</td>
 	  <?php if ($Type<>'frm') { ?><td>
-	    <select name="FieldName"><OPTION Value=""><?php echo RPT_SLCTFIELD; ?>
+	    <select name="FieldName"><option value=""><?php echo RPT_SLCTFIELD; ?>
 		<?php echo CreateFieldList($ReportID,$FieldListings['defaults']['fieldname'],''); ?></select>
 		</td>
 	  <?php } ?>
