XHTML corrections - replace Value= with value=

--- a/reportwriter/admin/forms/TplFrmCDta.html
+++ b/reportwriter/admin/forms/TplFrmCDta.html
@@ -20,7 +20,7 @@
     </tr>
     <tr>
       <td colspan="2"><div align="center">
-	    <select name="DataField"><OPTION Value=""><?php echo RPT_SLCTFIELD; ?>
+	    <select name="DataField"><option value=""><?php echo RPT_SLCTFIELD; ?>
 		<?php echo CreateFieldList($ReportID,$Params['DataField'],'Company'); ?></select>
 	  </div></td>
     </tr>
