XHTML corrections - replace Value= with value=

--- a/reportwriter/admin/forms/TplFrmTtl.html
+++ b/reportwriter/admin/forms/TplFrmTtl.html
@@ -50,7 +50,7 @@
     </tr>
     <tr>
       <td>
-	    <select name="TotalField"><OPTION Value=""><?php echo RPT_SLCTFIELD; ?>
+	    <select name="TotalField"><option value=""><?php echo RPT_SLCTFIELD; ?>
 		<?php echo CreateFieldList($ReportID,$Params['TotalField'],''); ?></select>
 	  </td>
       <td><input type="submit" name="todo" value="<?php echo RPT_BTN_ADD; ?>" /></td>
