XHTML corrections - replace Value= with value=

--- a/reportwriter/admin/forms/TplFrmCBlk.html
+++ b/reportwriter/admin/forms/TplFrmCBlk.html
@@ -32,7 +32,7 @@
 		  <input name="TblSeqNum"  type="text" value="<?php echo $Params['TblSeqNum']; ?>" size="3" maxlength="2" />
 		  <?php } // end if ?></div></td>
       <td>
-	    <select name="TblField"><OPTION Value=""><?php echo RPT_SLCTFIELD; ?>
+	    <select name="TblField"><option value=""><?php echo RPT_SLCTFIELD; ?>
 		<?php echo CreateFieldList($ReportID,$Params['TblField'],'Company'); ?></select>
 	  </td>
       <td><select name="Processing">
